# src/BeboerWeb.Api/Models/DTOs/Bookings/BookingDto.cs
@@ -8,7 +8,8 @@ namespace BeboerWeb.Api.Models.DTOs.Bookings
         public int Id { get; set; }
         public DateTime StartTime { get; set; }
         public DateTime EndTime { get; set; }
-        public IEnumerable<int> BookingItemIds { get; set; }
+        public int BookingItemId { get; set; }
+        public int TenantId { get; set; }
         public byte[] RowVersion { get; set; }
     }
 }
